frontend/test/should_fail/computations_decl_use_calls_type_mismatch_func_002.grg
using model_init;

func(b:B) : Node
{
	return(b);
}

rule r
{
	b:B;
	modify {
		eval {
			def b2:B;
			b2 = func(b);
		}
	}
}

